--- a/gb/21/7/4/n13067084.md
+++ b/gb/21/7/4/n13067084.md
@@ -1,22 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/lulgrv314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/lulgrv314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/lulgrv314/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/lulgrv314/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/lulgrv314/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/lulgrv314/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/lulgrv314/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>专家：中共党庆异象 凸显政权陷末日危机</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037490-GettyImages-1231623079@1200x1200-600x400.jpeg" />
+<a href="https://d2sn4gemyo21al.cloudfront.net/K1nhrTHmm"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
 <h6>图为今年3月，北京召开中共政协会议期间，在天安门广场的中共士兵。（ NOEL CELIS/AFP via Getty Images）
 </h6>
 <hr>
-	<p>【大纪元2021年07月05日讯】（大纪元记者骆亚、张玉洁采访报导）<ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>的所谓“<ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E7%99%BE%E5%B9%B4.md#1">百年</a><ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E5%85%9A%E5%BA%86.md#1">党庆</a>”期间，北京市的气氛异常紧张，各种禁令、管制令频发；7月1日天安门广场上的“庆典”，中共高官均表情严肃，场面诡异。海外学者直言，中共<ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E6%94%BF%E6%9D%83.md#1">政权</a>岌岌可危是不争的事实，而中共高官仍要做样子，企图维持政权，但依靠强制换来的表象终究不会持续太久。</p>
-<h2><ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>“<ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E7%99%BE%E5%B9%B4.md#1">百年</a><ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E5%85%9A%E5%BA%86.md#1">党庆</a>”气氛诡异</h2>
+	<p>【大纪元2021年07月05日讯】（大纪元记者骆亚、张玉洁采访报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>的所谓“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%99%BE%E5%B9%B4.md#1">百年</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%9A%E5%BA%86.md#1">党庆</a>”期间，北京市的气氛异常紧张，各种禁令、管制令频发；7月1日天安门广场上的“庆典”，中共高官均表情严肃，场面诡异。海外学者直言，中共<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%94%BF%E6%9D%83.md#1">政权</a>岌岌可危是不争的事实，而中共高官仍要做样子，企图维持政权，但依靠强制换来的表象终究不会持续太久。</p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%99%BE%E5%B9%B4.md#1">百年</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%9A%E5%BA%86.md#1">党庆</a>”气氛诡异</h2>
 <p>7月1日中共在天安门广场举行“百年庆典”，但出现在天安门城楼上的中共高官表情严肃。出席者包括中共总书记习近平、前总书记胡锦涛、现任总理李克强、政治局常委、前政治局常委温家宝、吴邦国、李瑞环、曾庆红、张德江、贾庆林、俞正声、张高丽，以及现年104岁的中共元老宋平。前党魁江泽民和前总理朱镕基未露面。</p>
 <p>当天天气阴沉，习近平讲话时一度下雨，现场人员纷纷穿上雨衣。前一天（6月30日），北京市同时发布雷电、冰雹、大风三项预警，海淀、门头沟等地降下冰雹。</p>
 <p>另外，中共对外宣传这是一场“庆典”，但连日来北京市处于“半戒严”状态。比如，中共警察、警犬数量大增；天安门广场及其周边部分地区被严格管制；地铁管制升级；进入北京的邮包必须二次安检；禁止无人机、风筝、鸽子；部分地区7月1日进行无线电管制等。</p>
 </p>
-<p><center><a src="https://www.youmaker.com/embed/0c229087-c053-48bf-b706-5b84ea4aeb8e?r=16x9&amp;d=12" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
+<p><center><a src=""></a><a href="https://d2sn4gemyo21al.cloudfront.net/K1nhrTHmm"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/0c229087-c053-48bf-b706-5b84ea4aeb8e?r=16x9&amp;d=12" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center>
 <p>再有，中共“伟大征程”文艺演出原计划6月29日举办，但临时提前一天，当局没有说明原因。当天习近平等一众高官出席，中共前党魁江泽民、胡锦涛，以及中共前总理朱镕基、温家宝均未露面。</p>
 <p>此外，中共在党内大搞“永不叛党宣言”。习近平6月18日率领一众高官宣誓，随后，各地开始“重温入党誓言”。</p>
-<h2>中共用高压手段要求人民效忠 凸显其<ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E5%8D%B1%E6%9C%BA.md#1">危机</a>和虚弱</h2>
-<p>台湾国家政策研究基金会副研究员李正修7月4日接受大纪元记者采访表示，只有共产国家才用这种政治和高压的手段、用统战宣传的方式，要求人民效忠，这实际上代表着中共<ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E6%94%BF%E6%9D%83.md#1">政权</a>对自己统治的合法性是相当心虚的，他们有高度的<ahref="https://github.com/lulgrv314/djy/blob/master/gb/tag/%E5%8D%B1%E6%9C%BA.md#1">危机</a>感。</p>
+<h2>中共用高压手段要求人民效忠 凸显其<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%B1%E6%9C%BA.md#1">危机</a>和虚弱</h2>
+<p>台湾国家政策研究基金会副研究员李正修7月4日接受大纪元记者采访表示，只有共产国家才用这种政治和高压的手段、用统战宣传的方式，要求人民效忠，这实际上代表着中共<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%94%BF%E6%9D%83.md#1">政权</a>对自己统治的合法性是相当心虚的，他们有高度的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%8D%B1%E6%9C%BA.md#1">危机</a>感。</p>
 <p>李正修说：“这是中国共产党自己内部的危机，他们越唱高调、越要歌颂共产党，反而凸显了自己内部的问题，就是因为没有办法解决，所以才需要用这么盛大的场面来掩饰。”</p>
 <p>悉尼科技大学中国问题专家冯崇义教授4日对大纪元记者表示，从7月1日天安门城楼上中共高官的表现来看，一方面他们他们不得不表演，另一方面又有些东西是无法掩饰的。</p>
 <p>冯崇义教授说：“他们共同做各种各样的表演，去维护那个共产党的江山。关起门来他们会为利益分赃、会有各种不同的激烈的派系之争，但是在维护共产党的江山、共产党奴役人民的这个特权范围方面，他们还有一致性。”</p>
@@ -38,44 +38,44 @@
 <p>责任编辑：林诗远#</p>
 	
 <hr>
-
+<hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/lulgrv314/djy/blob/master/gb/21/7/2/n13063030.md#1">中共百年 民众怒斥中共祸乱中国 残害百姓</a></li>
-<li><a href="https://github.com/lulgrv314/djy/blob/master/gb/21/7/2/n13063735.md#1">中共百年 美议员：悼念被杀害者的时刻</a></li>
-<li><a href="https://github.com/lulgrv314/djy/blob/master/gb/21/7/2/n13063846.md#1">中共百年 卡城民众中领馆前打幡上香</a></li>
-<li><a href="https://github.com/lulgrv314/djy/blob/master/gb/21/7/3/n13065209.md#1">中共百年党庆之日 已近3.8亿人退出其组织</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/2/n13063030.md#1">中共百年 民众怒斥中共祸乱中国 残害百姓</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/2/n13063735.md#1">中共百年 美议员：悼念被杀害者的时刻</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/2/n13063846.md#1">中共百年 卡城民众中领馆前打幡上香</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/3/n13065209.md#1">中共百年党庆之日 已近3.8亿人退出其组织</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/lulgrv314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/18/n10066904.md#1" target="_blank">信力建：谁抽去了中国人的脊梁？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/25/n11546426.md#1" target="_blank">中共强摘器官证据呈递联合国 媒体聚焦</a></li>
-<hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10003609.md#1" target="_blank">大逃港：哪里有自由，哪里就是我的祖国！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/30/n10884257.md#1" target="_blank">美国会CECC吁川习会关注法轮功受迫害</a></li><hr>
+
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/6/14/n13020872.md#1">【命理】彼此等候三十年的夫妻 结局夫荣妻贵</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/6/28/n13052640.md#1">自称预见中共肺炎肆虐 英国灵媒曝来年大事</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/6/29/n13056430.md#1">【未解之谜】“奋战50年”揭密UFO</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/6/25/n13048316.md#1">【未解之谜】海市蜃楼 亦真亦幻</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/6/28/n13053550.md#1">【馨香雅句】雍正十二美人图  皇家仕女人文生活</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/3/n13065384.md#1">【马克时空】精确制导炸弹 现代战争的宠儿</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/3/n13065208.md#1">【唐浩视界】揭中共13大谎言 真相惊醒你</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/1/n13060579.md#1">【珍言真语】谢田：从经济数据上看中共罪恶</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/2/n13064143.md#1">沈舟：歼-20参加党庆表演泄漏的秘密</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/2/n13063233.md#1">【拍案惊奇】习天安门喊统一 胡锦涛一脸茫然</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/1/n13061709.md#1">【时事纵横】党庆多不祥之兆 拿14亿人当肉盾？</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/1/n13061793.md#1">古天乐大陆机场被搜身 安检人员表情引关注</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/2/n13063386.md#1">刚完成产前筛检 台女星小甜甜今产下女娃</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/2/n13064291.md#1">胡歌原名用方言念很怪 粉丝见到字喊改回来</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/3/n13065098.md#1">XIUMIN与朴素贤今昔对比照 粉丝：只有我老了</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/1/n13061547.md#1">“终有一天会完” 杜汶泽呛声中共百年党庆</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/1/n13061176.md#1">4招伸展操 每天10秒矫正姿势 全身肌肉变柔软</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/6/30/n13058801.md#1">抗疫灵丹就在你脚下！接地气有助改善新冠</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/2/n13062919.md#1">美国载有一家五口的汽车 连续遭雷击三次</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/2/n13063759.md#1">糖类和蛋白质是减肥良伴？超商食品3菜单轻松瘦</a></li>
-<li><a href="https://github.com/sgynug341/djy/blob/master/gb/21/7/2/n13062690.md#1">机翼可折叠伸缩 斯洛伐克飞行车试飞35分钟</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/lulgrv314/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/lulgrv314/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/4/n13067084.htm">专家：中共党庆异象 凸显政权陷末日危机</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/4/n13067084.htm">专家：中共党庆异象 凸显政权陷末日危机</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/lulgrv314/djy/blob/master/gb/21/7/4/n13067084.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/lulgrv314/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/lulgrv314/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/lulgrv314/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/lulgrv314/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/lulgrv314/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/4/n13067084.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
